// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From.vue renders correctly 1`] = `
<div>
   
  <div>
    Welche Summe wird hier dargestellt?
  </div>
   
  <div
    class="flex-item flex-center flex-col flex-flex card"
    id="items"
  >
    <div
      class="flex-item flex-center flex-row"
    >
      <div
        class="flex-item flex-center flex-col"
      />
      <div
        class="flex-item flex-center flex-col"
      />
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
    </div>
  </div>
   
  <hr />
   
  <div>
    Lösung:
  </div>
   
  <div
    id="answer"
  >
    <input
      class="card big-text"
      id="answer-input"
      size="5"
      type="number"
    />
  </div>
</div>
`;

exports[`Swap.vue renders correctly 1`] = `
<div>
   
  <div>
    Stelle die gleiche Summe mit weniger Elementen dar
  </div>
   
  <div
    class="flex-item flex-center flex-col flex-flex card"
    id="items"
  >
    <div
      class="flex-item flex-center flex-row"
    >
      <div
        class="flex-item flex-center flex-col"
      />
      <div
        class="flex-item flex-center flex-col"
      />
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
      <div
        class="flex-item flex-center flex-col"
      >
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
        <div
          class="responsive"
        >
          <img
            src=""
          />
        </div>
      </div>
    </div>
  </div>
   
  <hr />
   
  <div>
    Lösung:
  </div>
   
  <div
    class="flex-item flex-center flex-col flex-flex dropzone"
    id="dropzone"
  >
    <div>
      
    Platziere hier die Elemente
  
    </div>
  </div>
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch flex-wrap"
  >
    <div
      class="flex-item flex-wrap flex-center-horizontally flex-row"
      id="item-selection"
    >
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-6"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-5"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-4"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-3"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-2"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-1"
      >
        <img
          src=""
        />
      </div>
    </div>
     
    <div
      class="flex-item flex-center card clickable responsive"
      id="undo"
      title="Neu starten!"
    >
      <img
        src=""
      />
    </div>
  </div>
</div>
`;

exports[`To.vue renders correctly 1`] = `
<div>
   
  <div
    class="flex-item flex-center flex-col"
  >
    <div>
      Ändere den Schwierigkeitsgrad:
    </div>
     
    <div
      class="flex-item flex-center flex-row"
    >
      <div
        class="card clickable responsive selected"
        id="difficulty-1"
        title="Schwierigkeitsgrad: leicht "
      >
        <img
          src=""
        />
      </div>
      <div
        class="card clickable responsive"
        id="difficulty-2"
        title="Schwierigkeitsgrad: mittelschwer "
      >
        <img
          src=""
        />
      </div>
    </div>
  </div>
   
  <div
    class="number"
  >
    
    Zahle mit
    
    <!---->
     
    <!---->
    
    Münzen die folgende Summe:
  
  </div>
   
  <div
    class="big-text"
    id="number"
  >
    27
  </div>
   
  <div
    class="flex-item flex-center flex-col flex-flex dropzone"
    id="dropzone"
  >
    <div>
      
    Platziere hier die Elemente
  
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch flex-wrap"
  >
    <div
      class="flex-item flex-wrap flex-center-horizontally flex-row"
      id="item-selection"
    >
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-6"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-5"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-4"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-3"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-2"
      >
        <img
          src=""
        />
      </div>
      <div
        class="flex-item flex-wrap flex-center card clickable responsive"
        draggable="true"
        id="item-selection-1"
      >
        <img
          src=""
        />
      </div>
    </div>
     
    <div
      class="flex-item flex-center card clickable responsive"
      id="undo"
      title="Neu starten!"
    >
      <img
        src=""
      />
    </div>
  </div>
</div>
`;
